checkbox strikethrough build

--- a/style.css
+++ b/style.css
@@ -72,6 +72,9 @@ body{
   position: absolute;
   margin-bottom: 130px;
   font: small-caps bold 100px/1 sans-serif;
+  /* font-family: 'Noto Sans KR', sans-serif;
+  font-size: 100px;
+  font-weight: 900; */
   color:white;
 }
 
@@ -128,6 +131,7 @@ body{
   background-color: transparent;
 }
 
+
 .js-form input:focus{
   outline:none;
   opacity: 1;
@@ -154,11 +158,64 @@ body{
   left:0;
   background: white;
   transform: scaleX(0);
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
 }
 
 .js-form input:focus ~ .underline:before{
   transform: scaleX(1);
+}
+
+.js-toDoList li{
+  width: 350px;
+  color: white;
+  text-align: left;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 600;
+  line-height: 25px;
+  font-size: 25px;
+}
+
+.js-toDoList input{
+  margin: 5%;
+}
+
+.js-toDoList button{
+  position:absolute;
+  height: 44px;
+  right: 50px;
+  text-decoration: none;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  cursor: pointer;
+  color: white;
+}
+
+/* .js-toDoList button:hover{
+  background:yellow;
+} */
+
+.js-toDoList{
+  margin: 0px;
+  padding: 0px;
+  width: 395px;
+  height: 174px;
+}
+
+.outer{
+  position:relative;
+  bottom: -210px;  
+  width: 395px;
+  height: 174px;
+  overflow: hidden;
+  background:transparent;
+}
+
+.listDiv{
+  position:absolute;
+  width: 440px;
+  height: 174px;
+  overflow-y: scroll;
 }
 
 .btn{
@@ -171,8 +228,83 @@ body{
 
 .form,
 .greetings,
-.js-toDoForm{
+.js-toDoForm,
+.outer{
   display: none;
+}
+
+.js-greetings{
+  position: absolute;
+  font-size: 24px;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: 600;
+  color:white;
+  bottom:220px;
+}
+
+.js-toDoForm{
+  position: absolute;
+  bottom:160px;
+}
+
+.js-toDoForm input{
+  height: 100%;
+  width: 350px;
+  font-size: 24px;
+  text-align: center;
+  border: none;
+  border-bottom: 3px solid white;
+  opacity: 0.7;
+  background-color: transparent;
+}
+
+
+.js-toDoForm input:focus{
+  outline:none;
+  opacity: 1;
+}
+
+.js-toDoForm .underline2 {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  height: 3px;
+}
+
+.js-toDoForm .underline2:before{
+  position:absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  left:0;
+  background: white;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in;
+}
+
+.js-toDoForm input:focus ~ .underline2:before{
+  transform: scaleX(1);
+}
+
+.delline{
+  text-decoration : line-through;
+}
+
+.moving{
+  animation: movingUp 0.5s ease;
+  position: absolute;
+  top: 300px;
+}
+
+@keyframes movingUp{
+  from{
+    opacity: 0;
+  } 
+  to{
+    opacity: 1;
+    position: absolute;
+    top: 300px;
+  }
 }
 
 .showing {
